Added validation for user input

--- a/config.json
+++ b/config.json
@@ -9,3 +9,4 @@ Temporary commit content 100
 Temporary commit content 149
 Temporary commit content 175
 Temporary commit content 189
+Temporary commit content 196
