Added validation for user input

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,4 @@ Temporary commit content 171
 Temporary commit content 174
 Temporary commit content 187
 Temporary commit content 195
+Temporary commit content 198
